# nugget

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
.cargo/: config.toml
src/: app.rs  asset.rs  camera.rs  entity.rs  ext.rs  lib.rs  main.rs  material.rs  mesh.rs  model.rs  renderer.rs  resources.rs  scene.rs  shader.wgsl  shared.rs  texture.rs  uniform.rs  vertex.rs  wasm.rs
src/resources/: material.rs  mesh.rs  mod.rs  node.rs  scene.rs  texture.rs
