[package]
name = "nugget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
# lib dependencies
wgpu = { git = "https://github.com/gfx-rs/wgpu.git", features = ["webgl"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
raw-window-handle = "0.4.3"

# executable dependencies
pollster = "0.2.5"
winit = "0.26.1"
