[package]
name = "nugget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
# lib dependencies
wgpu = "0.14.2"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
raw-window-handle = "0.5.0"
tobj = "3.2.2"
bytemuck = "1.12.3"

# executable dependencies
pollster = "0.2.5"
winit = "0.27.5"
clap = { version = "4", features = ["derive"] }


[dependencies.gltf]
version = "1.0"
features = ["extras", "names"]


